index page almost complete

--- a/index.html
+++ b/index.html
@@ -100,7 +100,48 @@
                 </div>
             </div>
         </section>
+        <section class="roadTripsSection">
+            <div class="mainWrapper">
+                <div class="roadTripsContent">
+                    <h2>Road trips anyone?</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores praesentium ullam voluptatum accusantium pariatur earum ab fugit eius ipsum ipsam quod dignissimos ratione laborum, voluptatem, alias quidem deserunt quia. Illum alias, unde impedit excepturi iure eos non vel doloribus id?</p>
+                    <button>Find Out More</button>
+                </div>
+            </div>
+        </section>
+        <section class="swimmingImg">
+        </section>
+        <section class="eventsSection">
+            <div class="mainWrapper">
+                <div class="eventsImg">
+                    <img src="assets/small-box.jpg" alt="two children sitting on steps writing on a clipboard">
+                </div>
+                <div class="eventsContent">
+                    <h2>Events</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit id recusandae mollitia reprehenderit optio aspernatur omnis ex? Neque, voluptate corrupti. Obcaecati dolorum nobis ipsa. Tempore debitis officiis possimus eos illum at aut rem fugit nobis ea maxime eligendi expedita, ut neque nesciunt eius, quis, numquam ullam. Aspernatur, hic. Obcaecati iste, velit expedita odit cum consectetur, eveniet possimus labore quos mollitia ea. Maiores, sint fugit suscipit tenetur omnis ea nulla magnam earum natus dignissimos facilis, sequi, ab itaque eum! Recusandae, officiis!</p>
+                    <button>Find Out More</button>
+                </div>
+            </div>
+        </section>
+        <section class="gallerySection">
+            <div class="mainWrapper">
+                <div class="galleryContainer">
+                    <div class="galleryItem">
+                        <img src="assets/gallery-image-1.jpg" alt="playground slide with an apartment in the background">
+                    </div>
+                    <div class="galleryItem">
+                        <img src="assets/gallery-image-2.jpg"  alt="kid peering over pink wall in a playground">
+                    </div>
+                    <div class="galleryItem">
+                        <img src="assets/gallery-image-3.jpg"  alt="children playing tug-of-war">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <p>Copyright &copy; 2019 HackerYou</p>
+    </footer>
 </body>
 </html>
 
