work on blog page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fun Place by Jeff</title>
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Walter+Turncoat" rel="stylesheet">
@@ -17,9 +18,9 @@
             <div class="headerContent">
                 <nav class="headerNav">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
@@ -37,41 +38,38 @@
             <div class="mainWrapper">
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
+                        <i class="fas fa-home"></i>
                         <div class="fourLinksTitle">
-                            <i class="fas fa-home"></i>
                             <h2>New space</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem? Obcaecati, dignissimos quis!</p>
                     </div>
                 </div>
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
+                        <i class="fas fa-users"></i>
                         <div class="fourLinksTitle">
-                            <i class="fas fa-users"></i>
                             <h2>Community</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus!
-                            Consequatur, nostrum dolorem? Obcaecati, dignissimos quis!</p>
                     </div>
                 </div>
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
+                        <i class="fas fa-file"></i>
                         <div class="fourLinksTitle">
-                            <i class="fas fa-file"></i>
                             <h2>Blog</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus!
-                            Consequatur, nostrum dolorem? Obcaecati, dignissimos quis!</p>
                     </div>
                 </div>
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
+                        <i class="fas fa-phone"></i>
                         <div class="fourLinksTitle">
-                            <i class="fas fa-phone"></i>
                             <h2>Get in Touch</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus!
-                            Consequatur, nostrum dolorem? Obcaecati, dignissimos quis!</p>
                     </div>
                 </div>
             </div>
@@ -145,5 +143,8 @@
 </body>
 </html>
 
+    <!-- to do: -->
 <!-- add alt tags -->
 <!-- add aria to icons -->
+<!-- add hover states to nav in each page-->
+<!-- add bullets to list in blog aside (::before) -->
