blog bottom section

--- a/blog.html
+++ b/blog.html
@@ -68,6 +68,28 @@
                 </div>
             <!-- </div> -->
         </section>
+        <section class="commentsSection">
+            <div class="commentsContainer">
+                <h2>Comments:</h2>
+                <div class="commentItem">
+                    <img src="" alt="">
+                    <div class="commentPost">
+                        <h3>Tuesday October 9th, 2019 by Mariama</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam labore aliquam fuga maiores fugit? Consectetur sapiente facilis earum, optio illo nam? Molestias quasi amet temporibus hic eaque distinctio, enim reiciendis rem id nostrum, optio harum fugit. Numquam possimus autem quam?</p>
+                    </div>
+                </div>
+                <div class="commentItem">
+                    <img src="" alt="">
+                    <div class="commentPost">
+                        <h3>Wednesday October 10th, 2019 by Rob</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate quam ducimus, modi dolorum aperiam inventore rerum quasi animi voluptatum, qui officia deleniti? Ipsa voluptatibus recusandae officiis assumenda, dolorem ipsum dolores quae sit provident cum deserunt!</p>
+                    </div>
+                </div>
+            </div>
+            <form action="">
+                
+            </form>
+        </section>
     </main>
 </body>
 </html>
