--- a/index.html
+++ b/index.html
@@ -146,5 +146,6 @@
     <!-- to do: -->
 <!-- add alt tags -->
 <!-- add aria to icons -->
+<!-- fix icons https://markheath.net/post/font-awesome-circle-background -->
 <!-- add hover states to nav in each page-->
 <!-- add bullets to list in blog aside (::before) -->
