--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="mainHeader">
         <div class="mainWrapper">
             <div class="headerContent">
                 <nav class="headerNav">
