all 3 pages base layout complete

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="blog.html">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="headerTitle">
@@ -146,6 +146,9 @@
     <!-- to do: -->
 <!-- add alt tags -->
 <!-- add aria to icons -->
+<!-- add aria to inputs and labels -->
 <!-- fix icons https://markheath.net/post/font-awesome-circle-background -->
 <!-- add hover states to nav in each page-->
 <!-- add bullets to list in blog aside (::before) -->
+<!-- fix header background heights and stretching -->
+<!-- box shadow take off rgba -->
