--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
             <div class="mainWrapper">
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
-                        <i class="fas fa-home"></i>
+                        <span class="fa-stack fa-2x">
+                            <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                            <i class="fa fa-home fa-stack-1x"></i>
+                        </span>
+                        <!-- <i class="fas fa-home"></i> -->
                         <div class="fourLinksTitle">
                             <h2>New space</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
@@ -47,7 +51,11 @@
                 </div>
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
-                        <i class="fas fa-users"></i>
+                        <span class="fa-stack fa-2x">
+                            <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                            <i class="fa fa-users fa-stack-1x"></i>
+                        </span>
+                        <!-- <i class="fas fa-users"></i> -->
                         <div class="fourLinksTitle">
                             <h2>Community</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
@@ -56,7 +64,11 @@
                 </div>
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
-                        <i class="fas fa-file"></i>
+                        <span class="fa-stack fa-2x">
+                            <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                            <i class="fa fa-file fa-stack-1x"></i>
+                        </span>
+                        <!-- <i class="fas fa-file"></i> -->
                         <div class="fourLinksTitle">
                             <h2>Blog</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
@@ -65,7 +77,11 @@
                 </div>
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
-                        <i class="fas fa-phone"></i>
+                        <span class="fa-stack fa-2x">
+                            <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                            <i class="fa fa-phone fa-stack-1x"></i>
+                        </span>
+                        <!-- <i class="fas fa-phone"></i> -->
                         <div class="fourLinksTitle">
                             <h2>Get in Touch</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
