working on contact page media queries

--- a/index.html
+++ b/index.html
@@ -163,8 +163,16 @@
 <!-- add alt tags -->
 <!-- add aria to icons -->
 <!-- add aria to inputs and labels -->
-<!-- fix icons https://markheath.net/post/font-awesome-circle-background -->
-<!-- add hover states to nav in each page-->
-<!-- add bullets to list in blog aside (::before) -->
+<!-- add hover states to icons in contact page -->
 <!-- fix header background heights and stretching -->
+<!-- add link to "about" section for each page -->
+<!-- media queries on contact page -->
+<!-- media queries on blog page -->
+<!-- media queries on index page -->
+
+
+    <!-- complete -->
+<!-- add bullets to list in blog aside (::before) -->
+<!-- add hover states to nav in each page-->
 <!-- box shadow take off rgba -->
+<!-- fix icons https://markheath.net/post/font-awesome-circle-background -->
