work on responsiveness index page

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 <!-- media queries on contact page -->
 <!-- media queries on blog page -->
 <!-- media queries on index page -->
+<!-- add hamburger menu -->
 
 
     <!-- complete -->
