responsiveness complete, need to add hamburgers

--- a/index.html
+++ b/index.html
@@ -160,20 +160,23 @@
 </html>
 
     <!-- to do: -->
-<!-- add alt tags -->
+
 <!-- add aria to icons -->
 <!-- add aria to inputs and labels -->
 <!-- add hover states to icons in contact page -->
 <!-- fix header background heights and stretching -->
 <!-- add link to "about" section for each page -->
-<!-- media queries on contact page -->
-<!-- media queries on blog page -->
-<!-- media queries on index page -->
-<!-- add hamburger menu -->
+<!-- add hamburger menu at 400px? -->
+<!-- make mixins -->
+<!-- code cleanup -->
 
 
     <!-- complete -->
+<!-- add alt tags -->
 <!-- add bullets to list in blog aside (::before) -->
 <!-- add hover states to nav in each page-->
 <!-- box shadow take off rgba -->
+<!-- media queries on contact page -->
+<!-- media queries on blog page -->
+<!-- media queries on index page -->
 <!-- fix icons https://markheath.net/post/font-awesome-circle-background -->
