--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <nav class="headerNav">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="index.html#about">About</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -34,7 +34,7 @@
         </div>
     </header>
     <main>
-        <section class="fourLinks">
+        <section class="fourLinks" id="about">
             <div class="mainWrapper">
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
@@ -42,7 +42,6 @@
                             <i class="fa fa-circle fa-stack-2x icon-background"></i>
                             <i class="fa fa-home fa-stack-1x"></i>
                         </span>
-                        <!-- <i class="fas fa-home"></i> -->
                         <div class="fourLinksTitle">
                             <h2>New space</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
@@ -55,7 +54,6 @@
                             <i class="fa fa-circle fa-stack-2x icon-background"></i>
                             <i class="fa fa-users fa-stack-1x"></i>
                         </span>
-                        <!-- <i class="fas fa-users"></i> -->
                         <div class="fourLinksTitle">
                             <h2>Community</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
@@ -68,7 +66,6 @@
                             <i class="fa fa-circle fa-stack-2x icon-background"></i>
                             <i class="fa fa-file fa-stack-1x"></i>
                         </span>
-                        <!-- <i class="fas fa-file"></i> -->
                         <div class="fourLinksTitle">
                             <h2>Blog</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
@@ -81,7 +78,6 @@
                             <i class="fa fa-circle fa-stack-2x icon-background"></i>
                             <i class="fa fa-phone fa-stack-1x"></i>
                         </span>
-                        <!-- <i class="fas fa-phone"></i> -->
                         <div class="fourLinksTitle">
                             <h2>Get in Touch</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, inventore? Impedit molestias enim accusamus! Consequatur, nostrum dolorem?</p>
@@ -109,7 +105,7 @@
                         <button>Read More</button>
                     </div>
                     <div class="newLocationImg">
-                        <img src="assets/right-image.jpg" alt="children's toy, wooden yellow block with red string threaded through">
+                        <img src="assets/right-image.jpg" alt="yellow wooden block on a bead roller coaster">
                     </div>
                 </div>
             </div>
@@ -165,14 +161,17 @@
 <!-- add aria to inputs and labels -->
 <!-- add hover states to icons in contact page -->
 <!-- fix header background heights and stretching -->
-<!-- add link to "about" section for each page -->
 <!-- add hamburger menu at 400px? -->
 <!-- make mixins -->
 <!-- code cleanup -->
+<!-- redo folder structure and partials -->
+<!-- change asset names -->
+<!-- add max wrapper -->
 
 
     <!-- complete -->
 <!-- add alt tags -->
+<!-- add link to "about" section for each page -->
 <!-- add bullets to list in blog aside (::before) -->
 <!-- add hover states to nav in each page-->
 <!-- box shadow take off rgba -->
