changed asset names

--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
         <section class="blogSection">
             <aside class="blogAside">
                 <div class="asideImg">
-                    <img src="assets/blog-side-image.jpg" alt="children reaching into a box of colored road chalk">
+                    <img src="assets/blogSideImage.jpg" alt="children reaching into a box of colored road chalk">
                 </div>
                 <div class="asideText">
                     <div class="asideMission">
@@ -54,7 +54,7 @@
             </aside>
             <div class="activities">
                 <div class="activitiesImg">
-                    <img src="assets/blog-post-imag.jpg" alt="child popping large floating soap bubbles">
+                    <img src="assets/blogPostImage.jpg" alt="child popping large floating soap bubbles">
                 </div>
                 <div class="activitiesText">
                     <h2>New activities</h2>
@@ -71,7 +71,7 @@
                 <h2>Comments:</h2>
                 <div class="commentItem first">
                     <div class="commentImg"> 
-                        <img src="assets/comment-1.jpg" alt="profile picture of a female young adult with glasses and colored hair">
+                        <img src="assets/comment1.jpg" alt="profile picture of a female young adult with glasses and colored hair">
                     </div>
                     <div class="commentPost">
                         <h3>Tuesday October 9th, 2019 by Mariama</h3>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="commentItem">
                     <div class="commentImg">
-                        <img src="assets/comment-2.jpg" alt="profile picture of a male young adult">
+                        <img src="assets/comment2.jpg" alt="profile picture of a male young adult">
                     </div>
                     <div class="commentPost">
                         <h3>Wednesday October 10th, 2019 by Rob</h3>
