--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="headerImg">
-                <img src="assets/home-box-header.jpg" alt="child riding a skateboard">
+                <img src="assets/homeBoxHeader.jpg" alt="child riding a skateboard">
             </div>
         </div>
     </header>
@@ -90,7 +90,7 @@
             <div class="mainWrapper">
                 <div class="ourPrograms">
                     <div class="ourProgramsImg">
-                        <img src="assets/left-image.jpg" alt="child smiling">
+                        <img src="assets/leftImage.jpg" alt="child smiling">
                     </div>
                     <div class="ourProgramsText">
                         <h2>Our programs</h2>
@@ -105,7 +105,7 @@
                         <button>Read More</button>
                     </div>
                     <div class="newLocationImg">
-                        <img src="assets/right-image.jpg" alt="yellow wooden block on a bead roller coaster">
+                        <img src="assets/rightImage.jpg" alt="yellow wooden block on a bead roller coaster">
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
         <section class="eventsSection">
             <div class="mainWrapper">
                 <div class="eventsImg">
-                    <img src="assets/small-box.jpg" alt="two children sitting on steps writing on a clipboard">
+                    <img src="assets/smallBox.jpg" alt="two children sitting on steps writing on a clipboard">
                 </div>
                 <div class="eventsContent">
                     <h2>Events</h2>
@@ -137,13 +137,13 @@
             <div class="mainWrapper">
                 <div class="galleryContainer">
                     <div class="galleryItem">
-                        <img src="assets/gallery-image-1.jpg" alt="playground slide with an apartment in the background">
+                        <img src="assets/galleryImage1.jpg" alt="playground slide with an apartment in the background">
                     </div>
                     <div class="galleryItem">
-                        <img src="assets/gallery-image-2.jpg"  alt="kid peering over pink wall in a playground">
+                        <img src="assets/galleryImage2.jpg"  alt="kid peering over pink wall in a playground">
                     </div>
                     <div class="galleryItem">
-                        <img src="assets/gallery-image-3.jpg"  alt="children playing tug-of-war">
+                        <img src="assets/galleryImage3.jpg"  alt="children playing tug-of-war">
                     </div>
                 </div>
             </div>
@@ -162,7 +162,6 @@
 <!-- add hover states to icons in contact page -->
 <!-- fix header background heights and stretching -->
 <!-- add hamburger menu at 400px? -->
-<!-- make mixins -->
 <!-- code cleanup -->
 <!-- redo folder structure and partials -->
 <!-- change asset names -->
@@ -171,6 +170,7 @@
 
     <!-- complete -->
 <!-- add alt tags -->
+<!-- make mixins -->
 <!-- add link to "about" section for each page -->
 <!-- add bullets to list in blog aside (::before) -->
 <!-- add hover states to nav in each page-->
