--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
                         <span class="fa-stack fa-2x">
-                            <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                            <i class="fa fa-home fa-stack-1x"></i>
+                            <i class="fa fa-circle fa-stack-2x icon-background" aria-hidden="true"></i>
+                            <i class="fa fa-home fa-stack-1x" aria-hidden="true"></i>
                         </span>
                         <div class="fourLinksTitle">
                             <h2>New space</h2>
@@ -51,8 +51,8 @@
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
                         <span class="fa-stack fa-2x">
-                            <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                            <i class="fa fa-users fa-stack-1x"></i>
+                            <i class="fa fa-circle fa-stack-2x icon-background" aria-hidden="true"></i>
+                            <i class="fa fa-users fa-stack-1x" aria-hidden="true"></i>
                         </span>
                         <div class="fourLinksTitle">
                             <h2>Community</h2>
@@ -63,8 +63,8 @@
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
                         <span class="fa-stack fa-2x">
-                            <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                            <i class="fa fa-file fa-stack-1x"></i>
+                            <i class="fa fa-circle fa-stack-2x icon-background" aria-hidden="true"></i>
+                            <i class="fa fa-file fa-stack-1x" aria-hidden="true"></i>
                         </span>
                         <div class="fourLinksTitle">
                             <h2>Blog</h2>
@@ -75,8 +75,8 @@
                 <div class="fourLinksContainer">
                     <div class="fourLinksText">
                         <span class="fa-stack fa-2x">
-                            <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                            <i class="fa fa-phone fa-stack-1x"></i>
+                            <i class="fa fa-circle fa-stack-2x icon-background" aria-hidden="true"></i>
+                            <i class="fa fa-phone fa-stack-1x" aria-hidden="true"></i>
                         </span>
                         <div class="fourLinksTitle">
                             <h2>Get in Touch</h2>
@@ -157,20 +157,21 @@
 
     <!-- to do: -->
 
-<!-- add aria to icons -->
-<!-- add aria to inputs and labels -->
-<!-- add hover states to icons in contact page -->
 <!-- fix header background heights and stretching -->
 <!-- add hamburger menu at 400px? -->
-<!-- code cleanup -->
 <!-- redo folder structure and partials -->
-<!-- change asset names -->
-<!-- add max wrapper -->
+
 
 
     <!-- complete -->
 <!-- add alt tags -->
+<!-- add aria to icons -->
+<!-- add max wrapper -->
+<!-- add aria to inputs and labels -->
+<!-- add hover states to icons in contact page -->
+<!-- code cleanup -->
 <!-- make mixins -->
+<!-- change asset names -->
 <!-- add link to "about" section for each page -->
 <!-- add bullets to list in blog aside (::before) -->
 <!-- add hover states to nav in each page-->
