--- a/blog.html
+++ b/blog.html
@@ -90,13 +90,13 @@
             </div>
             <form action="">
                 <div class="formFields">
-                    <label for="name" class="visuallyHidden"></label>
+                    <label for="name" class="visuallyHidden">Name</label>
                     <input type="text" placeholder="Name">
 
-                    <label for="email" class="visuallyHidden"></label>
+                    <label for="email" class="visuallyHidden">Email</label>
                     <input type="email" placeholder="Email address">
                 </div>
-                <label for="comments" class="visuallyHidden"></label>
+                <label for="comments" class="visuallyHidden">Comments</label>
 
                 <textarea name="comments" id="comments" cols="30" rows="10" placeholder="Comment"></textarea>
 
