--- a/index.html
+++ b/index.html
@@ -156,18 +156,16 @@
 </html>
 
     <!-- to do: -->
-
-<!-- fix header background heights and stretching -->
 <!-- add hamburger menu at 400px? -->
 <!-- redo folder structure and partials -->
-
-
+<!-- fix index page title size and style -->
 
     <!-- complete -->
 <!-- add alt tags -->
 <!-- add aria to icons -->
 <!-- add max wrapper -->
 <!-- add aria to inputs and labels -->
+<!-- fix header background heights and stretching -->
 <!-- add hover states to icons in contact page -->
 <!-- code cleanup -->
 <!-- make mixins -->
