final with non-functional hamburger

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <img src="assets/homeBoxHeader.jpg" alt="child riding a skateboard">
             </div>
         </div>
+        <div class="hamburger">
+            <i class="fas fa-bars" aria-hidden="true" title="Navigation menu"></i>
+            <span class="sr-only visuallyHidden">Navigation menu</span>
+        </div>
     </header>
     <main>
         <section class="fourLinks" id="about">
