--- a/blog.html
+++ b/blog.html
@@ -29,6 +29,10 @@
                 </div>
             </div>
         </div>
+        <div class="hamburger">
+            <i class="fas fa-bars" aria-hidden="true" title="Navigation menu"></i>
+            <span class="sr-only visuallyHidden">Navigation menu</span>
+        </div>
     </header>
     <main>
         <section class="blogSection">
