changed some comments

--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="commentPost">
                         <h3>Wednesday October 10th, 2019 by Rob</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate quam ducimus, modi dolorum aperiam inventore rerum quasi animi voluptatum!</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem quas placeat modi est voluptatum, magnam culpa! Incidunt consectetur harum non?</p>
                     </div>
                 </div>
             </div>
